Use simpler list calls for better performance